Corrects overflow border and uncomments bubble script

--- a/estilo.css
+++ b/estilo.css
@@ -5,24 +5,29 @@ body {
     font-family: "Verdana", sans-serif;
     font-size: 14px;
     color: #333;
-    width: 800px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0;
+}
+
+#recipiente,
+#cardapio {
     box-sizing: border-box;
 }
 
-main {
+#recipiente {
+    width: 800px;
+    margin: 0 auto;
     border: 1px solid #d3d3d3;
     position: relative;
     background-image: linear-gradient(#f6f1b2, #4599b2);
 }
 
+header, #cardapio, footer {
+    width: 646px;
+    margin-left: 153px;
+}
+
 header {
     text-align: center;
-    width: 646px;
-    margin-left: 154px;
 }
 
 header h1 {
@@ -30,34 +35,35 @@ header h1 {
     font-size: 36px;
     color: #e90c0c;
     margin-top: 30px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     position: relative; left: -36px;
 }
 
 header h2 {
     font-family: "Trebuchet MS", sans-serif;
     font-size: 24px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
     position: relative; right: -48px;
 }
 
 header h2 em {
     color: #d027aa;
+    font-style: normal;
 }
 
 h3 {
     font-weight: bold;
     font-size: 18px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 
-section {
+#lateral {
     width: 154px;
-    position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;
+    position: absolute; top: 0; left: 0; bottom: 0; right: 0;
 }
 
-section h2 {
+#lateral h2 {
     font-weight: bold;
     font-size: 48px;
     position: absolute; top: 32%; left: -25%;
@@ -73,7 +79,7 @@ img[src$="bolhas.png"] {
 }
 
 img[src$="peixe.png"] {
-   position: absolute; left: -44px; bottom: 0px;
+   position: absolute; left: -44px; bottom: 0;
 }
 
 img[src$="cartoes.png"] {
@@ -81,19 +87,16 @@ img[src$="cartoes.png"] {
 }
 
 #cardapio {
-    width: 646px;
     line-height: 2em;
-    margin-left: 154px;
     padding-left: 1em;
     padding-bottom: 1em;
-    box-sizing: border-box;
     border: 1px solid #aac0ae;
 }
 
 ul {
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 2.5em;
-    padding: 0px;
+    padding: 0;
 }
 
 li {
@@ -106,9 +109,7 @@ li {
 }
 
 footer {
-    width: 646px;
     height: 116px;
-    margin-left: 154px;
     position: relative;
 }
 
